<resources>
    <string name="app_name">mco2</string>
    <string name="fiction_hero">FICTION HERO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signed">Signed</string>
    <string name="already_have_an_account_login">Already have an account, Login</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_in">Dont have an account, Sign-in</string>
    <string name="selected_item">Selected item </string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>N/A</item>
    </string-array>
    <string name="year">Select Birth Year</string>

    <string name="title_notifications">Notification</string>
    <string name="home">HOME</string>

    <string name="novelTitle">Classroom of the Elite</string>
    <string name="novelAuthor">Syougo Kinugasa</string>
    <string name="starCount">839</string>
    <string name="novelSynopsis">On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment.</string>
    <string name="novelGenre">Drama Drama Drama</string>
    <string-array name="novelChapterTitle">
        <item>Chapter 12 : Temporary Chapter</item>
        <item>Chapter 11 : Temporary Chapter</item>
        <item>Chapter 10 : Temporary Chapter</item>
        <item>Chapter 9 : Temporary Chapter</item>
        <item>Chapter 8 : Temporary Chapter</item>
        <item>Chapter 7 : Temporary Chapter</item>
        <item>Chapter 6 : Temporary Chapter</item>
        <item>Chapter 5 : Temporary Chapter</item>
        <item>Chapter 4 : Temporary Chapter</item>
        <item>Chapter 3 : Temporary Chapter</item>
        <item>Chapter 2 : Temporary Chapter</item>
        <item>Chapter 1 : Temporary Chapter</item>
    </string-array>

    <string name="novelContent">On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment. On the surface, Koudo Ikusei Senior High School is a utopia. The students enjoy an unparalleled amount of freedom, and it is ranked highly in Japan. However, the reality is less than ideal. Four classes, A through D, are ranked in order of merit, and only the top classes receive favorable treatment.</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="title_home">title_home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_of_n_episodes">Total of N episodes</string>
    <string name="added_on_yyyy_mm_dd">Added on yyyy-mm-dd</string>
    <string name="episodes">Episodes</string>
    <string name="n">N</string>
    <string name="_0">0</string>
    <string name="placeholder">Placeholder</string>
    <string name="followers">Followers</string>
    <string name="stars">Stars</string>
    <string name="works">Works</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="followed">Followed</string>
    <string name="edit_account_detail">Edit Account Detail</string>
    <string name="remove_following">Remove Following</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_works">My Works</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="title">Title</string>
    <string name="synopsis">Synopsis</string>
    <string name="attach_thumbnail_photo_optional">Attach Thumbnail Photo(Optional)</string>
    <string name="tags">Tags</string>
    <string name="reviews">Reviews</string>
    <string name="leave_reviews">Leave Reviews</string>
    <string name="submit">submit</string>
    <string name="novel_title">Novel Title</string>
    <string name="releasedate">releaseDate</string>


</resources>