<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/card_edge"
        android:paddingBottom="@dimen/_5sdp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="@dimen/_6sdp"

            android:src="@drawable/star" />

        <TextView
            android:id="@+id/tv_count_inp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/_0"
            android:textSize="@dimen/_16ssp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_title_inp"
                android:layout_width="wrap_content"
                android:ellipsize="end"

                android:maxLines="1"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/_12sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/black"

                android:textStyle="bold"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_date_inp"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/added_on_yyyy_mm_dd"
                    android:textSize="@dimen/_8sdp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/tv_sum_of_episodes_inp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:hint="@string/n"
                    android:paddingEnd="@dimen/_5sdp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_ep"
                    android:textSize="@dimen/_8sdp" />
                <TextView
                    android:id="@+id/tv_ep"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/episodes"
                    android:textSize="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>