<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".activities.EditNovelActivity">
    <Button
        android:id="@+id/btn_create_episode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#98DADE"
        android:text="Create New Episode"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rv_tags"
        app:layout_constraintStart_toStartOf="@+id/rv_tags"
        app:layout_constraintTop_toBottomOf="@+id/rv_tags" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lawn_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/notificationSettings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ib_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/lawn_green"
                    android:padding="@dimen/_5sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/previous_arrow_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="6dp"
                    android:maxLines="1"
                    android:text="Create New Novel"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:paddingStart="@dimen/_10sdp"
        android:background="@color/light_grey"
        android:hint="@string/title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <EditText
        android:id="@+id/et_synopsis"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:paddingStart="@dimen/_10sdp"
        android:background="@color/light_grey"
        android:hint="@string/synopsis"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />
    <EditText
        android:id="@+id/tv_thumbnail"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:paddingStart="@dimen/_10sdp"
        android:background="@drawable/border_edge2"
        android:hint="@string/attach_thumbnail_photo_optional"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_synopsis" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_thumbnail">

        <ImageButton
            android:id="@+id/add_tags"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/add" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/tags"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>