<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".fragments.UserFragment"
    android:orientation="vertical"
    android:background="@color/white_smoke"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/user_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/lawn_green"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_edit"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/edit" />

                <ImageView
                    android:id="@+id/iv_setting"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/setting" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout2"
        android:paddingBottom="@dimen/_15sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cmv_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@color/white_smoke"
            />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder"
            android:textSize="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:paddingBottom="@dimen/_10sdp"
            android:textColor="@color/black"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp">

            <LinearLayout
                android:id="@+id/follower_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_follow"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/heart_edge"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/n"
                    android:textSize="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/_10sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/followers"
                    android:textSize="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/_10sdp"/>
                <TextView
                    android:id = "@+id/tv_isfollowed"
                    android:text = "no"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/total_stars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/follower_container">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/star_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/tv_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/n"
                    android:textSize="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/_10sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/stars"
                    android:textSize="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/_10sdp"/>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appbarmid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1">
        <!--&lt;!&ndash;        TODO use tab layout-->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/al_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RadioGroup
            android:id="@+id/rdogrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="Recent Works"
                android:background="@drawable/card_edge"
                android:button="@null"
                android:checked="true"
                android:layout_weight="1"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/card_edge"
                android:button="@null"
                android:layout_weight="1"
                android:text="Bookmarks"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/card_edge"
                android:button="@null"
                android:text="Following"
                android:gravity="center" />

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdogrp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>